# RepoLens-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/repolens/: __init__.py  __main__.py  agent_findings.py  analyzer.py  cli.py  config.py  errors.py  evidence.py  llm_budget.py  observability.py  orchestrator.py  renderers.py  schemas.py  toolset.py
src/repolens/agents/: __init__.py  subagents.py
src/repolens/tools/: __init__.py  manifest.py  paths.py  read.py  scanner.py  search.py
tests/repolens/: test_agent_findings.py  test_analyzer.py  test_cli.py  test_evidence.py  test_manifest.py  test_orchestrator.py  test_renderers.py  test_runtime.py  test_safe_read.py  test_scanner.py  test_schemas.py  test_search.py  test_subagents.py
